# SparkFox

./: .gitignore  .npmrc  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  README.zh-CN.md  docker-compose.yml  package.json
crates/agent/sparkfox-ag-agent/: Cargo.toml
crates/agent/sparkfox-ag-agent/src/: agents_md.rs  bootstrap.rs  cache_diagnostics.rs  companion_tools.rs  context.rs  cron_tools.rs  engine.rs  knowledge_tools.rs  lib.rs  local_agent_invocation.rs  local_delegate_tool.rs  local_delegation_progress.rs  loop_guard.rs  memory_tools.rs  requirement_tools.rs  session.rs  skill_tool.rs  tool_execution.rs  vcr.rs
crates/agent/sparkfox-ag-agent/tests/: autocompact_test.rs  bootstrap_test.rs  compact_types_test.rs  cwd_injection_test.rs  deferred_activation_test.rs  emergency_test.rs  engine_compact_test.rs  engine_test.rs  json_stream_approval_test.rs  memory_context_integration.rs  microcompact_test.rs  output_compaction_test.rs  plan_e2e_test.rs  plan_engine_test.rs  plan_prompt_file_test.rs  plan_tools_test.rs  skills_e2e.rs  tool_execution_test.rs  tool_guidance_prompt_test.rs
crates/agent/sparkfox-ag-browser/: Cargo.toml
crates/agent/sparkfox-ag-browser/src/: approval.rs  extract.rs  lib.rs  redline.rs  replay.rs  site_memory.rs  tool.rs  visual_fallback.rs
crates/agent/sparkfox-ag-browser/tests/: integration_e2e.rs  site_memory.rs  site_memory_e2e.rs  visual_fallback.rs
crates/agent/sparkfox-ag-cli/: Cargo.toml
crates/agent/sparkfox-ag-cli/src/: main.rs
crates/agent/sparkfox-ag-mcp/: Cargo.toml
crates/agent/sparkfox-ag-mcp/src/: config.rs  manager.rs  tool_proxy.rs
crates/agent/sparkfox-ag-providers/: Cargo.toml
crates/agent/sparkfox-ag-providers/src/: anthropic.rs  anthropic_shared.rs  bedrock.rs  lib.rs  openai.rs  vertex.rs
crates/agent/sparkfox-ag-providers/tests/: provider_anthropic_test.rs  provider_openai_test.rs
crates/agent/sparkfox-ag-skills/: Cargo.toml
crates/agent/sparkfox-ag-skills/src/: conditional.rs  context_modifier.rs  discovery.rs  discovery_supplemental_tests.rs  executor.rs  frontmatter.rs  hooks.rs  loader.rs  mcp.rs  paths.rs  shell.rs  types.rs  watcher.rs
crates/backend/sparkfox-be-agent-execution/: Cargo.toml
crates/backend/sparkfox-be-agent-execution/src/: attempt_runner.rs  control_steps.rs  conversation_effect.rs  domain_mapper.rs  engine.rs  event_publisher.rs  participant_resolver.rs  participant_router.rs  plan_materializer.rs  planner.rs  production.rs  routes.rs  scheduler.rs  template_routes.rs
crates/backend/sparkfox-be-ai-agent/: Cargo.toml
crates/backend/sparkfox-be-ai-agent/src/: browser_fetcher.rs  idle_scanner.rs  knowledge_completer.rs  knowledge_retrieval.rs  knowledge_writeback.rs  lib.rs  registry.rs  runtime_handle.rs  runtime_registry.rs  runtime_state.rs  terminal_title_completer.rs  types.rs
crates/backend/sparkfox-be-ai-agent/tests/: acp_agent_integration.rs  acp_module_surface.rs  agent_types_integration.rs  cc_switch_integration.rs  factory_provider_integration.rs  knowledge_search_e2e.rs  knowledge_writeback_e2e.rs  prompt_pipeline_integration.rs  skill_manager_integration.rs
crates/backend/sparkfox-be-app/: Cargo.toml
crates/backend/sparkfox-be-app/src/: channel_asset_resolver.rs  cli.rs  config.rs  desktop.rs  lib.rs  main.rs  provider_deletion.rs  services.rs  workshop_bridge.rs
crates/backend/sparkfox-be-app/tests/: agent_execution_e2e.rs  agent_integration_e2e.rs  auth_e2e.rs  autowork_idmm_cooperation_e2e.rs  auxiliary_e2e.rs  builtin_asset_contract.rs  channel_e2e.rs  companion_e2e.rs  conversation_e2e.rs  cron_e2e.rs  custom_agent_e2e.rs  extension_e2e.rs  gateway_e2e.rs  health.rs  idmm_e2e.rs  idmm_intervention_e2e.rs  local_mode.rs  message_e2e.rs  office_e2e.rs  remote_mcp_smoke.rs  requirements_e2e.rs  skills_builtin_e2e.rs  startup_smoke.rs  system_provider_e2e.rs  system_version_e2e.rs  websocket_e2e.rs  webui_lan_smoke.rs  work_dir_e2e.rs
crates/backend/sparkfox-be-auth/: Cargo.toml
crates/backend/sparkfox-be-auth/src/: companion_token.rs  cookie.rs  csrf.rs  error.rs  extract.rs  jwt.rs  middleware.rs  password.rs  qr_token.rs  rate_limit.rs  routes.rs  security.rs  trust.rs
crates/backend/sparkfox-be-auth/tests/: jwt_tests.rs  middleware_tests.rs  route_tests.rs  validation_tests.rs
crates/backend/sparkfox-be-creation/: Cargo.toml
crates/backend/sparkfox-be-creation/src/: dto.rs  lib.rs  provider.rs  routes.rs  service.rs
crates/backend/sparkfox-be-cron/: Cargo.toml
crates/backend/sparkfox-be-cron/src/: artifacts.rs  busy_guard.rs  error.rs  events.rs  executor.rs  routes.rs  scheduler.rs  service.rs  sink.rs  skill_file.rs  skill_suggest.rs  state.rs  types.rs
crates/backend/sparkfox-be-cron/tests/: prompt_test.rs  service_integration.rs  skill_file_test.rs
crates/backend/sparkfox-be-gateway/: Cargo.toml
crates/backend/sparkfox-be-gateway/src/: browser_registry.rs  caps_agent.rs  caps_agent_execution.rs  caps_autowork.rs  caps_browser.rs  caps_channel.rs  caps_companion.rs  caps_computer.rs  caps_confirmation.rs  caps_conversation.rs  caps_cron.rs  caps_files.rs  caps_idmm.rs  caps_knowledge.rs  caps_knowledge_ext.rs  caps_mcp.rs  caps_memory.rs  caps_requirement.rs  caps_system.rs  (+10 more)
crates/backend/sparkfox-be-knowledge/: Cargo.toml
crates/backend/sparkfox-be-preset/: Cargo.toml
crates/backend/sparkfox-be-public-agent/: Cargo.toml
crates/backend/sparkfox-be-requirement/: Cargo.toml
crates/backend/sparkfox-be-secret/: Cargo.toml
crates/backend/sparkfox-be-shell/: Cargo.toml
crates/backend/sparkfox-be-system/: Cargo.toml
crates/backend/sparkfox-be-terminal/: Cargo.toml
crates/backend/sparkfox-be-webhook/: Cargo.toml
crates/sparkfox/sparkfox-agent/: Cargo.toml  README.md
crates/sparkfox/sparkfox-chat/: Cargo.toml  README.md
crates/sparkfox/sparkfox-core/: Cargo.toml  README.md
crates/sparkfox/sparkfox-crdt/: Cargo.toml  README.md
crates/sparkfox/sparkfox-e2ee/: Cargo.toml  README.md
crates/sparkfox/sparkfox-embedding/: Cargo.toml  README.md
crates/sparkfox/sparkfox-graph/: Cargo.toml  NOTICE  README.md
(+1187 files in other folders)
