[package]
name = "sparkfox-be-agent-execution"
version.workspace = true
edition.workspace = true

[dependencies]
sparkfox-be-common.workspace = true
sparkfox-be-db.workspace = true
sparkfox-be-api-types.workspace = true
sparkfox-be-auth.workspace = true
sparkfox-be-file.workspace = true
sparkfox-be-realtime.workspace = true
sparkfox-be-ai-agent.workspace = true
sparkfox-be-conversation.workspace = true
sparkfox-be-preset.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
dashmap.workspace = true
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
sqlx = { workspace = true }
tower = { workspace = true, features = ["util"] }
tempfile = { workspace = true }
