[package]
name = "sparkfox-be-creation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sparkfox-be-common.workspace = true
sparkfox-be-api-types.workspace = true
sparkfox-be-auth.workspace = true
sparkfox-be-db.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
axum.workspace = true
tracing.workspace = true
async-trait.workspace = true
reqwest.workspace = true
base64.workspace = true

[dev-dependencies]
tempfile.workspace = true
wiremock.workspace = true
