[package]
name = "sparkfox-be-preset"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sparkfox-be-common = { workspace = true }
sparkfox-be-api-types = { workspace = true }
sparkfox-be-db = { workspace = true }
sparkfox-be-extension = { workspace = true }
axum = { workspace = true }
include_dir = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
sparkfox-be-realtime = { workspace = true }
tempfile = { workspace = true }
tower = { workspace = true, features = ["util"] }
http-body-util = { workspace = true }
